<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/botton_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttom_tab"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@drawable/ic_toolbar_iconbackground"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:src="@drawable/icon_home"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tab"
                android:textColor="@color/tab_txt_unselect"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/video_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical"
            android:baselineAligned="false" >

            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:src="@drawable/icon_video"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_video"
                android:textColor="@color/tab_txt_unselect"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cultural_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical"
            android:baselineAligned="false" >

            <ImageView
                android:id="@+id/imageview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:src="@drawable/icon_star"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cultural_tab"
                android:textColor="@color/tab_txt_unselect"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signature_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical"
            android:baselineAligned="false" >

            <ImageView
                android:id="@+id/imageview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:src="@drawable/icon_sign"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signature_wall"
                android:textColor="@color/tab_txt_unselect"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/meseum_location_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical"
            android:baselineAligned="false" >

            <ImageView
                android:id="@+id/imageview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:src="@drawable/icon_location"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meseum_location"
                android:textColor="@color/tab_txt_unselect"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>